fix: update card-flex alignment to flex-start and adjust padding for card content

--- a/wp-content/themes/aras-base/frontend/src/styles/scss/_cards.scss
+++ b/wp-content/themes/aras-base/frontend/src/styles/scss/_cards.scss
@@ -478,7 +478,7 @@
         .card-flex {
             display: flex;
             flex-direction: row;
-            align-items: center;
+            align-items: flex-start;
 
             .card-icon-container {
                 width: calc(60px);
@@ -495,6 +495,7 @@
             }
 
             .card-content-container {
+                padding-top: 2.1rem;
                 padding-left: 2rem;
                 flex: 1;
             }
